[project]
name = "metatesters"
version = "0.1.0"
description = "A LangGraph multi agents system designed to jailbreak and analyze other LangGraph systems"
authors = [{name = "Marcos Reyes"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.30.0",
    "jinja2>=3.1.6",
    "langchain-core>=0.3.60",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.5",
    "langgraph-cli[inmem]>=0.2.10",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]
